--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
+ width: auto;
   margin: 0 auto;
-  padding: 2rem;
   box-sizing: border-box;
+  background-color: white;
 }
 
 
